Changes to go with common update

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -131,7 +131,7 @@
       </form>
     </div></div>
     <!-- End sub nav -->
-    <dd4-login data-ng-if="!appCtrl.globalData.user" data-label="Ledger" data-allow-signup="true"></dd4-login>
+    <dd4-login data-ng-if="!appCtrl.globalData.user" data-label="IP 360" data-allow-signup="true"></dd4-login>
     <div data-ng-if="appCtrl.globalData.user" data-ng-controller="IISCtrl as iisCtrl">
 
       <!-- Status bar -->
