More clean up and refactoring

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,6 +57,10 @@
     <!-- Digital D4 -->
     <script src="js/dd4-common-min.js"></script>
     <script src="js/iis.js"></script>
+
+    <!-- CryptoJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
   </head>
 
   <body data-ng-app="iis" data-ng-controller="DD4AppCtrl as appCtrl">
