--- a/src/main/js/html/vendor_add.html
+++ b/src/main/js/html/vendor_add.html
@@ -52,11 +52,11 @@
             </p>
             <p class="colx3-center">
               <label for="billingRate2HrSoc">&lt; 2hr SOC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2hrSoc" id="billingRate2HrSoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2HrSoc" id="billingRate2HrSoc" class="full-width">
             </p>
             <p class="colx3-right">
               <label for="billingRate2HrRoc">&lt; 2hr ROC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2hrRoc" id="billingRate2HrRoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2HrRoc" id="billingRate2HrRoc" class="full-width">
             </p>
           </div>
           <h2>Billing Flat Rates</h2>
@@ -67,11 +67,11 @@
             </p>
             <p class="colx3-center">
               <label for="billingFlat2HrSoc">&lt; 2hr SOC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2hrSoc" id="billingFlat2HrSoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2HrSoc" id="billingFlat2HrSoc" class="full-width">
             </p>
             <p class="colx3-right">
               <label for="billingFlat2HrRoc">&lt; 2hr ROC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2hrRoc" id="billingFlat2HrRoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2HrRoc" id="billingFlat2HrRoc" class="full-width">
             </p>
           </div>
           <label for="notes">Notes</label>
