--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,7 +45,9 @@
       body { height: 100%; width: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100%; width: 75%; float: left; }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjNloCm6mOYV0Uk1ilOTAclLbgebGCBQ0&v=3.exp&libraries=places"></script>
+    <script async
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjJSnQ862pRxN4-PBI4t2hKYlqyCF5eDg&libraries=places">
+    </script>
 
     <script src="js/libs/jquery-1.10.2.min.js"></script>
     <script src="js/libs/jquery-ui-1.11.0.min.js"></script>
@@ -70,8 +72,8 @@
     <header>
       <div class="container_12">
         <p id="skin-name"><small>IISOS</small> <strong>0.75</strong></p>
-        <div class="server-info">Server: <strong>Tomcat</strong></div>
-        <div class="server-info">Java: <strong>1.8</strong></div>
+        <div class="server-info">Server: <strong>Google Cloud</strong></div>
+        <div class="server-info">Java: <strong>11</strong></div>
       </div>
     </header>
     <!-- End server status -->
