--- a/src/main/js/html/nurse.html
+++ b/src/main/js/html/nurse.html
@@ -1,149 +1,175 @@
 <article class="container_12">
-	<h2>{{nurseCtrl.nurse.fullName}}</h2>
-	<section class="grid_10">
-		<div id="tab-global" class="tabs-content">
-			<ul class="tabs js-tabs same-height">
-				<li data-ng-repeat="tab in nurseCtrl.tabs" data-ng-class="{current: nurseCtrl.selectedTab == tab}">
-					<a href="#/nurse/{{nurseCtrl.nurseId}}/{{tab}}" title="{{tab}}">{{tab}}</a>
-				</li>
-			</ul>
-			<div class="tabs-content">
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.calendar">
-          <div data-iis-calendar="{entity: 'nurse', entityId: nurseCtrl.nurse.id}">
-          </div>
-				</div>
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.general">
+  <h2>{{nurseCtrl.nurse.fullName}}</h2>
+  <section class="grid_10">
+    <div id="tab-global" class="tabs-content">
+      <ul class="tabs js-tabs same-height">
+        <li data-ng-repeat="tab in nurseCtrl.tabs" data-ng-class="{current: nurseCtrl.selectedTab == tab}">
+          <a href="#/nurse/{{nurseCtrl.nurseId}}/{{tab}}" title="{{tab}}">{{tab}}</a>
+        </li>
+      </ul>
+      <div class="tabs-content">
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.calendar">
+          <div data-iis-calendar="{entity: 'nurse', entityId: nurseCtrl.nurse.id}"></div>
+        </div>
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.general">
           <div class="block-content form">
             <label for="statusId" class="">Status</label>
-            <select data-ng-model="nurseCtrl.nurse.statusId" id="statusId" class="full-width" data-ng-change="nurseCtrl.update('statusId')"
+            <select data-ng-model="nurseCtrl.nurse.statusId" id="statusId" class="full-width"
+                    data-ng-change="nurseCtrl.update('statusId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.NURSE_STATUS) | orderBy:'name'">
             </select>
             <label for="firstName" class="">First Name</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.firstName" id="firstName" class="full-width" data-on-change="nurseCtrl.update('firstName')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.firstName" id="firstName" class="full-width"
+                   data-on-change="nurseCtrl.update('firstName')">
             <label for="lastName" class="">Last Name</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.lastName" id="lastName" class="full-width" data-on-change="nurseCtrl.update('lastName')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.lastName" id="lastName" class="full-width"
+                   data-on-change="nurseCtrl.update('lastName')">
             <label>Address</label>
-            <div data-dd4-address="nurseCtrl.update('address')" data-ng-model="nurseCtrl.nurse.address" class="full-width"></div>
+            <div data-dd4-address="nurseCtrl.update('address')" data-ng-model="nurseCtrl.nurse.address"
+                 class="full-width"></div>
             <label for="addrUnit" class="">Unit #</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.address.unit" id="addrUnit" size="4" data-on-change="nurseCtrl.update('address')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.address.unit" id="addrUnit" size="4"
+                   data-on-change="nurseCtrl.update('address')">
             <label for="phoneNumber" class="">Phone Number</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.phoneNumber" id="phoneNumber" class="full-width" data-on-change="nurseCtrl.update('phoneNumber')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.phoneNumber" id="phoneNumber"
+                   class="full-width" data-on-change="nurseCtrl.update('phoneNumber')">
             <label for="email" class="">Email Address</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.email" id="email" class="full-width" data-on-change="nurseCtrl.update('email')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.email" id="email" class="full-width"
+                   data-on-change="nurseCtrl.update('email')">
             <label for="userName" class="">Username</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.userName" id="userName" class="full-width" data-on-change="nurseCtrl.update('userName')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.userName" id="userName" class="full-width"
+                   data-on-change="nurseCtrl.update('userName')">
             <label for="payFlat" class="">Per Visit Pay</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat" id="payFlat" class="full-width" data-on-change="nurseCtrl.update('payFlat')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat" id="payFlat" class="full-width"
+                   data-on-change="nurseCtrl.update('payFlat')">
             <label for="payRate" class="">Pay Rate</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payRate" id="payRate" class="full-width" data-on-change="nurseCtrl.update('payRate')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payRate" id="payRate" class="full-width"
+                   data-on-change="nurseCtrl.update('payRate')">
             <label for="payFlat2HrSoc" class="">&lt; 2hr SOC Visit Pay</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat2hrSoc" id="payFlat2HrSoc" class="full-width" data-on-change="nurseCtrl.update('payFlat2hrSoc')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat2HrSoc" id="payFlat2HrSoc"
+                   class="full-width" data-on-change="nurseCtrl.update('payFlat2HrSoc')">
             <label for="payRate2HrSoc" class="">&lt; 2hr SOC Pay Rate</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payRate2hrSoc" id="payRate2HrSoc" class="full-width" data-on-change="nurseCtrl.update('payRate2hrSoc')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payRate2HrSoc" id="payRate2HrSoc"
+                   class="full-width" data-on-change="nurseCtrl.update('payRate2HrSoc')">
             <label for="payFlat2HrRoc" class="">&lt; 2hr FU Visit Pay</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat2hrRoc" id="payFlat2HrRoc" class="full-width" data-on-change="nurseCtrl.update('payFlat2hrRoc')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payFlat2HrRoc" id="payFlat2HrRoc"
+                   class="full-width" data-on-change="nurseCtrl.update('payFlat2HrRoc')">
             <label for="payRate2HrRoc" class="">&lt; 2hr FU Pay Rate</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.payRate2hrRoc" id="payRate2HrRoc" class="full-width" data-on-change="nurseCtrl.update('payRate2hrRoc')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.payRate2HrRoc" id="payRate2HrRoc"
+                   class="full-width" data-on-change="nurseCtrl.update('payRate2HrRoc')">
             <label for="mileageRate" class="">Mileage Rate</label>
-            <input type="text" data-ng-model="nurseCtrl.nurse.mileageRate" id="mileageRate" class="full-width" data-on-change="nurseCtrl.update('mileageRate')">
+            <input type="text" data-ng-model="nurseCtrl.nurse.mileageRate" id="mileageRate"
+                   class="full-width" data-on-change="nurseCtrl.update('mileageRate')">
             <label for="notes" class="">Notes</label>
-            <textarea data-ng-model="nurseCtrl.nurse.notes" id="notes" rows="10" class="full-width" data-on-change="nurseCtrl.update('notes')"></textarea>
+            <textarea data-ng-model="nurseCtrl.nurse.notes" id="notes" rows="10" class="full-width"
+                      data-on-change="nurseCtrl.update('notes')"></textarea>
           </div>
-				</div>
+        </div>
         <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.licenses">
           <div id="tab-license">
             <div class="block-content form">
               <div data-ng-repeat="licenseCategory in nurseCtrl.licenseCategories">
-              <h2>{{licenseCategory.name}}</h2>
-              <div data-ng-repeat="license in licenseCategory.licenses | orderBy:'type.rank'">
-              <div class="columns">
-                <div class="colx2-left">
+                <h2>{{licenseCategory.name}}</h2>
+                <div data-ng-repeat="license in licenseCategory.licenses | orderBy:'type.rank'">
                   <div class="columns">
                     <div class="colx2-left">
-                      <label>{{license.type.name}}</label>
-                      <input type="text" data-ng-model="license.number" data-on-change="nurseCtrl.updateLicense(license, 'number')"/>
-                    </div>
-                    <p class="colx2-right">
-                      <label>Valid Date</label>
-                      <div data-dd4-datepicker="nurseCtrl.updateLicense(license, 'validDate')" data-ng-model="license.validDate">
-                      </div>
-                    </p>
-                  </div>
-                </div>
-                <div class="colx2-right">
-                  <div class="columns">
-                    <div data-ng-if="!license.type.data" class="colx2-left">
-                      <label>Exp Date</label>
-                      <div data-dd4-datepicker="nurseCtrl.updateLicense(license, 'expirationDate')" data-ng-model="license.expirationDate">
+                      <div class="columns">
+                        <div class="colx2-left">
+                          <label>{{license.type.name}}</label>
+                          <input type="text" data-ng-model="license.number"
+                                 data-on-change="nurseCtrl.updateLicense(license, 'number')"/>
+                        </div>
+                        <p class="colx2-right">
+                          <label>Valid Date</label>
+                        <div data-dd4-datepicker="nurseCtrl.updateLicense(license, 'validDate')"
+                             data-ng-model="license.validDate">
+                        </div>
+                        </p>
                       </div>
                     </div>
                     <div class="colx2-right">
-                      <div data-ng-show="license.dataFile">
-                        <a href="api/files/{{license.dataFile.id}}/{{license.dataFile.name}}" class="document-pdf" target="_blank">
-                          <img src="images/icons/fugue/document-pdf.png" width="16" height="16">Download</a>
-                        <a title="Delete" data-ng-click="nurseCtrl.showFileDeleteDialog(license)">
-                          <img src="images/icons/fugue/cross-circle.png" width="16" height="16"></a>
+                      <div class="columns">
+                        <div data-ng-if="!license.type.data" class="colx2-left">
+                          <label>Exp Date</label>
+                          <div data-dd4-datepicker="nurseCtrl.updateLicense(license, 'expirationDate')"
+                               data-ng-model="license.expirationDate">
+                          </div>
+                        </div>
+                        <div class="colx2-right">
+                          <div data-ng-show="license.dataFile">
+                            <a href="api/files/{{license.dataFile.id}}/{{license.dataFile.name}}"
+                               class="document-pdf" target="_blank">
+                              <img src="images/icons/fugue/document-pdf.png" width="16"
+                                   height="16">Download</a>
+                            <a title="Delete"
+                               data-ng-click="nurseCtrl.showFileDeleteDialog(license)">
+                              <img src="images/icons/fugue/cross-circle.png" width="16"
+                                   height="16"></a>
+                          </div>
+                          <button data-ng-show="!license.dataFile"
+                                  data-ng-click="nurseCtrl.showUploadDialog(license)">
+                            Upload File
+                          </button>
+                        </div>
                       </div>
-                      <button data-ng-show="!license.dataFile" data-ng-click="nurseCtrl.showUploadDialog(license)">
-                        Upload File
-                      </button>
                     </div>
                   </div>
                 </div>
-              </div>
-              </div>
               </div>
             </div>
           </div>
         </div>
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.unconfirmed">
-					<div data-dd4-table="nurseCtrl.TableType.UNCONFIRMED"></div>
-				</div>
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.pending">
-					<div data-dd4-table="nurseCtrl.TableType.PENDING_ASSESSMENT"></div>
-				</div>
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.unconfirmed">
+          <div data-dd4-table="nurseCtrl.TableType.UNCONFIRMED"></div>
+        </div>
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.pending">
+          <div data-dd4-table="nurseCtrl.TableType.PENDING_ASSESSMENT"></div>
+        </div>
         <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.reviewable">
           <div data-dd4-table="nurseCtrl.TableType.REVIEWABLE"></div>
         </div>
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.payable">
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.payable">
           <div class="block-border">
             <h1>Payable</h1>
             <table class="table sortable no-margin" cellspacing="0" width="100%" data-page-length="25">
               <thead>
-                <tr>
-                  <th class="black-cell"><span data-ng-class="{loading: tableCtrl.loading}"></span></th>
-                  <th>Patient</th>
-                  <th>Date</th>
-                  <th>Payment Type</th>
-                  <th>Pay Hours</th>
-                  <th>Hourly Rate</th>
-                  <th>Visit Pay</th>
-                  <th>Pay Mileage</th>
-                  <th>Mileage Rate</th>
-                  <th>Total Payment</th>
-                </tr>
+              <tr>
+                <th class="black-cell"><span data-ng-class="{loading: tableCtrl.loading}"></span></th>
+                <th>Patient</th>
+                <th>Date</th>
+                <th>Payment Type</th>
+                <th>Pay Hours</th>
+                <th>Hourly Rate</th>
+                <th>Visit Pay</th>
+                <th>Pay Mileage</th>
+                <th>Mileage Rate</th>
+                <th>Total Payment</th>
+              </tr>
               </thead>
               <tbody>
               <tr data-ng-repeat="payable in nurseCtrl.payables | orderBy:'start'">
                 <td class="th table-check-cell">
-                  <input type="checkbox" data-ng-model="payable.selected" data-ng-change="nurseCtrl.updatePaystub()"/>
+                  <input type="checkbox" data-ng-model="payable.selected"
+                         data-ng-change="nurseCtrl.updatePaystub()"/>
                 </td>
                 <td><a href="#/assessment/{{payable.id}}">{{payable.patientName}}</a></td>
                 <td>{{payable.start | date:'MM/dd/yyyy'}}</td>
                 <td><select data-ng-model="payable.paymentInfo.accountingTypeId"
                             data-ng-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"
                             data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.ACCOUNTING_TYPE) | orderBy:'name'">
-                  </select>
+                </select>
                 </td>
                 <td><input type="text" data-ng-model="payable.paymentInfo.hours" style="width: 72px;"
                            data-on-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"/></td>
-                <td><input type="text" data-ng-model="payable.paymentInfo.hourlyRate" style="width: 72px;"
+                <td><input type="text" data-ng-model="payable.paymentInfo.hourlyRate"
+                           style="width: 72px;"
                            data-on-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"/></td>
                 <td><input type="text" data-ng-model="payable.paymentInfo.flatRate" style="width: 72px;"
                            data-on-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"/></td>
                 <td><input type="text" data-ng-model="payable.paymentInfo.mileage" style="width: 72px;"
                            data-on-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"/></td>
-                <td><input type="text" data-ng-model="payable.paymentInfo.mileageRate" style="width: 72px;"
+                <td><input type="text" data-ng-model="payable.paymentInfo.mileageRate"
+                           style="width: 72px;"
                            data-on-change="nurseCtrl.updatePayable(payable, 'paymentInfo')"/></td>
                 <td>{{payable.paymentInfo.total | currency}}</td>
               </tr>
@@ -168,17 +194,18 @@
                     <div>{{nurseCtrl.paystub.netPay | currency}}</div>
                   </div>
                 </div>
-                <label>Pay Date</label><div data-dd4-datepicker data-ng-model="nurseCtrl.paystub.payDate"></div>
+                <label>Pay Date</label>
+                <div data-dd4-datepicker data-ng-model="nurseCtrl.paystub.payDate"></div>
                 <button data-ng-click="nurseCtrl.createPaystub()">Create Paystub</button>
               </fieldset>
             </div>
           </section>
-				</div>
-				<div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.payHistory">
-					<div data-dd4-table="nurseCtrl.TableType.PAY_HISTORY"></div>
-				</div>
-			</div>
-		</div>
+        </div>
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.payHistory">
+          <div data-dd4-table="nurseCtrl.TableType.PAY_HISTORY"></div>
+        </div>
+      </div>
+    </div>
     <div data-ng-show="nurseCtrl.uploadDialogShown" id="modal" style="display: block;">
       <div class="modal-window block-border" style="display: block; left: 388px; top: 50px; width: 400px;">
         <ul class="action-tabs right">
@@ -194,5 +221,5 @@
         </div>
       </div>
     </div>
-	</section>
+  </section>
 </article>
