Fixing of vendor page and js syntax error in vendoraddctrl.js

--- a/src/main/js/html/vendor.html
+++ b/src/main/js/html/vendor.html
@@ -35,15 +35,15 @@
 						<label for="billingRate">Billing Rate</label>
 						<input type="text" data-ng-model="vendorCtrl.vendor.billingRate" id="billingRate" data-on-change="vendorCtrl.update('billingRate')"/>
 						<label for="billingRateSoc">Billing Rate < 2hr SOC</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.billingRate2HrSoc" id="billingRateSoc" data-on-change="vendorCtrl.update('billingRate2hrSoc')"/>
+						<input type="text" data-ng-model="vendorCtrl.vendor.billingRate2HrSoc" id="billingRateSoc" data-on-change="vendorCtrl.update('billingRate2HrSoc')"/>
 						<label for="billingRateRoc">Billing Rate < 2hr ROC</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.billingRate2HrRoc" id="billingRateRoc" data-on-change="vendorCtrl.update('billingRate2hrRoc')"/>
+						<input type="text" data-ng-model="vendorCtrl.vendor.billingRate2HrRoc" id="billingRateRoc" data-on-change="vendorCtrl.update('billingRate2HrRoc')"/>
 						<label for="flatRate">Flat Rate</label>
 						<input type="text" data-ng-model="vendorCtrl.vendor.billingFlat" id="flatRate" data-on-change="vendorCtrl.update('billingFlat')"/>
 						<label for="flatSoc">Flat < 2hr SOC</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.billingFlat2HrSoc" id="flatSoc" data-on-change="vendorCtrl.update('billingFlat2hrSoc')"/>
+						<input type="text" data-ng-model="vendorCtrl.vendor.billingFlat2HrSoc" id="flatSoc" data-on-change="vendorCtrl.update('billingFlat2HrSoc')"/>
 						<label for="flatRoc">Flat < 2hr ROC</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.billingFlat2HrRoc" id="flatRoc" data-on-change="vendorCtrl.update('billingFlat2hrRoc')"/>
+						<input type="text" data-ng-model="vendorCtrl.vendor.billingFlat2HrRoc" id="flatRoc" data-on-change="vendorCtrl.update('billingFlat2HrRoc')"/>
 						<label for="mileageRate">Mileage Rate</label>
 						<input type="text" data-ng-model="vendorCtrl.vendor.mileageRate" id="mileageRate" data-on-change="vendorCtrl.update('mileageRate')"/>
 						<label for="notes">Notes</label>
