--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,14 +141,14 @@
     <div data-ng-if="appCtrl.globalData.user" data-ng-controller="IISCtrl as iisCtrl">
 
       <!-- Status bar -->
-      <div id="status-bar"><div class="container_12">
+      <div id="status-bar" class="container_12">
 
         <ul id="status-infos">
-          <li class="spaced">Logged in as: <strong>{{iisCtrl.sharedData.user.email}}</strong></li>
+          <li class="spaced">Logged in as: <strong>{{iisCtrl.globalData.activeSession.user.email}}</strong></li>
           <li><a data-ng-click="iisCtrl.logout()" class="button red" title="Logout"><span class="smaller">LOGOUT</span></a></li>
         </ul>
 
-      </div></div>
+      </div>
       <!-- End status bar -->
 
       <div id="header-shadow"></div>
