--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,7 +46,7 @@
       #map-canvas { height: 100%; width: 75%; float: left; }
     </style>
     <script async
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjJSnQ862pRxN4-PBI4t2hKYlqyCF5eDg&libraries=places">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjJSnQ862pRxN4-PBI4t2hKYlqyCF5eDg&libraries=places,drawing&callback=initMap">
     </script>
 
     <script src="js/libs/jquery-1.10.2.min.js"></script>
@@ -54,6 +54,7 @@
 
     <!-- Angular -->
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-cookies.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
 
     <!-- Digital D4 -->
@@ -71,7 +72,7 @@
     <!-- Server status -->
     <header>
       <div class="container_12">
-        <p id="skin-name"><small>IISOS</small> <strong>0.75</strong></p>
+        <p id="skin-name"><small>IISOS</small> <strong>2.0</strong></p>
         <div class="server-info">Server: <strong>Google Cloud</strong></div>
         <div class="server-info">Java: <strong>11</strong></div>
       </div>
@@ -137,8 +138,10 @@
       </form>
     </div></div>
     <!-- End sub nav -->
-    <dd4-login data-ng-if="!appCtrl.globalData.user" data-label="IP 360" data-allow-signup="true"></dd4-login>
-    <div data-ng-if="appCtrl.globalData.user" data-ng-controller="IISCtrl as iisCtrl">
+    <div data-ng-controller="SettingsCtrl">
+      <dd4-login data-ng-if="!appCtrl.globalData.activeSession" data-label="IP 360" data-allow-signup="true"></dd4-login>
+    </div>
+    <div data-ng-if="appCtrl.globalData.activeSession" data-ng-controller="IISCtrl as iisCtrl">
 
       <!-- Status bar -->
       <div id="status-bar" class="container_12">
