Change tracker backend code.

--- a/src/main/js/html/intake.html
+++ b/src/main/js/html/intake.html
@@ -72,8 +72,8 @@
           </div>
           <div class="columns">
             <p class="colx3-left">
-              <label for="billingId" class="required">Billing</label>
-              <select data-ng-model="intakeCtrl.patient.billingId" id="billingId" class="full-width"
+              <label for="billingVendorId" class="required">Billing</label>
+              <select data-ng-model="intakeCtrl.patient.billingVendorId" id="billingVendorId" class="full-width"
                 data-ng-options="vendor.id as vendor.name for vendor in intakeCtrl.vendors | orderBy:'name'">
               </select>
             </p>
