--- a/src/main/js/html/vendor.html
+++ b/src/main/js/html/vendor.html
@@ -9,7 +9,7 @@
 			</ul>
 			<div class="tabs-content">
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.tabs.calendar">
-          <div data-iis-calendar="{entity: 'vendor', entityId: vendorCtrl.vendor.id}">
+          <div data-iis-calendar="{entityType: 'vendor', entityId: vendorCtrl.vendor.id}">
           </div>
 				</div>
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.tabs.general">
