--- a/src/main/js/html/patient.html
+++ b/src/main/js/html/patient.html
@@ -9,7 +9,7 @@
       </ul>
       <div class="tabs-content">
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.calendar" style="height: 640px;">
-             <div data-iis-calendar="{entity: 'patient', entityId: patientCtrl.patient.id}"></div>
+             <div data-iis-calendar="{entityType: 'patient', entityId: patientCtrl.patient.id}"></div>
         </div>
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.general">
           <div class="block-content form">
