--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,8 +58,8 @@
     <script src="js/lib/angular-route.min.js"></script>
 
     <!-- Digital D4 -->
-    <script src="js/dd4-common-min.js"></script>
-    <script src="js/iis.js"></script>
+    <script src="js/dd4-common-min.js?version=1"></script>
+    <script src="js/iis.js?version=1"></script>
 
     <!-- CryptoJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
@@ -72,7 +72,7 @@
     <!-- Server status -->
     <header>
       <div class="container_12">
-        <p id="skin-name"><small>IISOS</small> <strong>2.0</strong></p>
+        <p id="skin-name"><small>IP 360 OS</small> <strong>1.2</strong></p>
         <div class="server-info">Server: <strong>Google Cloud</strong></div>
         <div class="server-info">Java: <strong>11</strong></div>
       </div>
@@ -91,15 +91,17 @@
         <li class="patients"><a href="#patients" title="Patients">Patients</a>
           <ul>
             <li><a href="#patients" title="Patients">Patients</a></li>
-            <li><a href="#pendass" title="Pending Assessement">Pending Assessement</a></li>
+            <li><a href="#pendass" title="Pending Assessment">Pending Assessment</a></li>
             <li><a href="#intake" title="New Intake">New Intake</a></li>
             <li><a href="#pintake" title="Pending Intakes">Pending Intakes</a></li>
           </ul>
         </li>
-        <li class="users"><a href="#users" title="Users">Users</a>
+        <li class="nurses" title="Nurses"><a href="#nurses" title="">Nurses</a>
           <ul>
-            <li><a href="#users" title="Users">Users</a></li>
-            <li><a href="#user_add" title="Add User">Add User</a></li>
+            <li><a href="#nurses" title="Nurses">Nurses</a></li>
+            <li><a href="#nurse_add" title="Add Nurse">Add Nurse</a></li>
+            <li><a href="#license_alert" title="License Alert">License Alert</a></li>
+            <li><a href="#unconfirmed" title="Unconfirmed Appointments">Unconfirmed Appointments</a></li>
           </ul>
         </li>
         <li class="billing"><a href="#billable" title="Billing">Billing</a>
@@ -113,12 +115,10 @@
             <li><a href="#vendor_add" title="Add Vendor">Add Vendor</a></li>
           </ul>
         </li>
-        <li class="nurses" title="Nurses"><a href="#nurses" title="">Nurses</a>
+        <li class="users"><a href="#users" title="Users">Users</a>
           <ul>
-            <li><a href="#nurses" title="Nurses">Nurses</a></li>
-            <li><a href="#nurse_add" title="Add Nurse">Add Nurse</a></li>
-            <li><a href="#license_alert" title="License Alert">License Alert</a></li>
-            <li><a href="#unconfirmed" title="Unconfirmed Appointments">Unconfirmed Appointments</a></li>
+            <li><a href="#users" title="Users">Users</a></li>
+            <li><a href="#user_add" title="Add User">Add User</a></li>
           </ul>
         </li>
         <li class="reports"><a href="#reports" title="Reports">Reports</a>
