Assessment completion calculation, change history tabes, rename js files

--- a/src/main/js/html/nurse.html
+++ b/src/main/js/html/nurse.html
@@ -204,6 +204,9 @@
         <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.payHistory">
           <div data-dd4-table="nurseCtrl.TableType.PAY_HISTORY"></div>
         </div>
+        <div data-ng-if="nurseCtrl.selectedTab == nurseCtrl.tabs.changeHistory">
+          <div data-dd4-table="nurseCtrl.TableType.CHANGE_HISTORY"></div>
+        </div>
       </div>
     </div>
     <div data-ng-show="nurseCtrl.uploadDialogShown" id="modal" style="display: block;">
