--- a/src/main/js/html/patient.html
+++ b/src/main/js/html/patient.html
@@ -110,6 +110,9 @@
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.completed">
           <div data-dd4-table="patientCtrl.TableType.COMPLETED_ASSESSMENT"></div>
         </div>
+        <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.changeHistory">
+          <div data-dd4-table="patientCtrl.TableType.CHANGE_HISTORY"></div>
+        </div>
       </div>
     </div>
   </section>
